--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Request at:</strong>
-  <%= @ticket.request_at %>
+  <strong>Opened:</strong>
+  <%= @ticket.opened %>
 </p>
 
 <p>
@@ -11,13 +11,13 @@
 </p>
 
 <p>
-  <strong>Tech:</strong>
-  <%= @ticket.tech %>
+  <strong>Assigned Technician:</strong>
+  <%= @ticket.assigned_technician %>
 </p>
 
 <p>
-  <strong>Completed at:</strong>
-  <%= @ticket.completed_at %>
+  <strong>Open:</strong>
+  <%= @ticket.closed %>
 </p>
 
 <p>
