--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: ticket, local: true) do |form| %>
+<%= bootstrap_form_with(model: ticket, local: true) do |form| %>
   <% if ticket.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(ticket.errors.count, "error") %> prohibited this ticket from being saved:</h2>
@@ -11,32 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :request_at %>
-    <%= form.date_select :request_at %>
-  </div>
-
-  <div class="field">
-    <%= form.label :desc %>
+    <%= form.date_select :opened %>
     <%= form.text_area :desc %>
-  </div>
-
-  <div class="field">
-    <%= form.label :tech %>
-    <%= form.text_field :tech %>
-  </div>
-
-  <div class="field">
-    <%= form.label :completed_at %>
-    <%= form.date_select :completed_at, include_blank:true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :notes %>
+    <%= form.text_field :assigned_technician %>
+    <%= form.date_select :closed, include_blank:true %>
     <%= form.text_area :notes %>
-  </div>
-
-  <div class="actions">
     <%= form.submit %>
-  </div>
+  
 <% end %>
