--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,7 @@
  *= require_self
  */
 // Custom bootstrap variables must be set or imported *before* bootstrap.
+
+// importing bootstrap stuff to 'prettify' page style
 @import "bootstrap";
 @import "rails_bootstrap_forms";
