--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <p>
-  <strong>Desc:</strong>
+  <strong>Description:</strong>
   <%= @ticket.desc %>
 </p>
 
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <strong>Open:</strong>
+  <strong>Closed:</strong>
   <%= @ticket.closed %>
 </p>
 
